--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             Hyperblog: 
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="cabecera"
             </div id= "post">
