una version del hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyplerblog 2.0 </title>
+        <title>Bienvenido a Hyplerblog 2.0 Yo puedo</title>
         <link rel="stylesheet" href="estilos.css/estilos.css" />
     </head>
     <body>
