--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyplerblog 2.0 Yo puedo</title>
+        <title>Bienvenido a Hyplerblog 2.0 Yo puedo y lo voy a demostrar</title>
         <link rel="stylesheet" href="estilos.css/estilos.css" />
     </head>
     <body>
