--- a/blogpost.html
+++ b/blogpost.html
@@ -2,19 +2,21 @@
     <head>
         <title>Bienvenido a Hyplerblog 2.0 Yo puedo y lo voy a demostrar</title>
         <link rel="stylesheet" href="estilos.css/estilos.css" />
+        <meta charset="UTF-8 />
     </head>
     <body>
         <div id="container">
-            Hyperblog: 
-            <span id="tagline">Tu blog de cabecera</span>
-        </div>
-        <div id="cabecera"
-            </div id= "post">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
+            <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que salir a conferencias o salir en Youtube. Excepto si eres un rockstart. Pero estadisticamente no lo eres ....  por ahora.</p>
-                <p>Suscribete y dale like</p>
-            </div>
+                <p>Suscríbete y dale like</p>
+            </div>     
         </div>
     </body>
 </html>
