--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con las ramas</p>
+                <p><img src="imagenes/familia.jpg" width="50%" /></p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que salir a conferencias o salir en Youtube. Excepto si eres un rockstart. Pero estadisticamente no lo eres ....  por ahora.</p>
                 <p>Suscríbete y dale like</p>
             </div>     
