--- a/articulo.html
+++ b/articulo.html
@@ -16,6 +16,7 @@
                     Excepto si eres un rockstar. Pero estadísticamente no lo eres..
                     por ahora
                 </p>
+                <p>Suscríbete y dale like</p>
             </div>
         </div>
                 
