--- a/articulo.html
+++ b/articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Poust jeje</title>
+        <title>Bienvenido al Poust 2.0 jeje</title>
         <link rel="stylesheet" href="css1/estilos1.css" />
     </head>
     <body>
