--- a/articulo.html
+++ b/articulo.html
@@ -17,6 +17,9 @@
                     por ahora
                 </p>
                 <p>Suscríbete y dale like</p>
+                <div id="footer">
+                    Hecho con amor en platzi &lt;3
+                </div>
             </div>
         </div>
                 
