--- a/articulo.html
+++ b/articulo.html
@@ -13,6 +13,7 @@
         </div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con las ramas</p>
+                <p><img src="imagenes/sm.jpg" width="30%" /></p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube.
                     Excepto si eres un rockstar. Pero estadísticamente no lo eres..
                     por ahora
